      setups are prone to many issues when used polymorphically in
      all cases.

    - dynamic_loader accepts a query_class= to customize the Query
      classes used for both the dynamic collection and the queries
      built from it.

- sql
    - RowProxy objects can be used in place of dictionary arguments 
      sent to connection.execute() and friends.  [ticket:935]
      
- mssql
    - Added in new types: MSVarBinary and MSImage. [ticket:1249]
    - Added in the MSReal and MSNText types.

- bugfixes, behavioral changes
- general
- orm
    - Exceptions raised during compile_mappers() are now
      preserved to provide "sticky behavior" - if a hasattr()
      call on a pre-compiled mapped attribute triggers a failing 
      compile and suppresses the exception, subsequent compilation 
      is blocked and the exception will be reiterated on the 
      next compile() call.  This issue occurs frequently
      when using declarative.

    - Added ScopedSession.is_active accessor. [ticket:976]
      
    - Corrected problem with Query.delete() and
      Query.update() not working properly with bind 
      parameters. [ticket:1242]

    - Query.select_from(), from_statement() ensure
      that the given argument is a FromClause,
      or Text/Select/Union, respectively.

    - Query() can be passed a "composite" attribute
      as a column expression and it will be expanded.
      Somewhat related to [ticket:1253].
      
    - Query() is a little more robust when passed
      various column expressions such as strings,
      clauselists, text() constructs (which may mean
      it just raises an error more nicely).
      
    - first() works as expected with Query.from_statement().
    
    - Fixed bug introduced in 0.5rc4 involving eager 
      loading not functioning for properties which were
      added to a mapper post-compile using 
      add_property() or equivalent.

    - Fixed bug where many-to-many relation() with